:uri-asciidoctor: http://asciidoctor.org
:icons: font
:source-highlighter: pygments
:nofooter:
link:index.html[Home]

== Mouseless Changelog


// TODO(hbt) NEXT review :changelog and make sure it redirects to this page (html)
// TODO(hbt) NEXT deprecate pages in favor of docs/

## 1.3.2
 . Fixed contentEditable elements not being editable using external editor https://github.com/hbt/mouseless/issues/75


## 1.3.1
 . Added `openLastDownload` command https://github.com/hbt/mouseless/issues/60
 . Added alias `incrementURLFirstPath` to command `incrementURLPath` and `decrementURLFirstPath` to `decrementURLPath` https://github.com/hbt/mouseless/issues/59
 . Added `incrementURLLastPath` `decrementURLLastPath` commands  https://github.com/hbt/mouseless/issues/59
 . Added `viewSourceExternalEditor` command https://github.com/hbt/mouseless/issues/57
 . Enhanced documentation and released on http://mouseless.hbtlabs.com and https://hbt.github.io/mouseless 
  
## 1.3.0

New Settings: 

- ignorenumerickeys - https://github.com/hbt/mouseless/commit/145126dd83edd6b05b780e7245bf1988d2c26bb9
- debug - https://github.com/hbt/mouseless/commit/3dbbfe831412c44ec16ba5dea6411514b56e48a0
- experimental  - turns on experiments (view below)
- mouselesshintcharacters = "dsafrewq,tgcx" - https://github.com/hbt/mouseless/commit/acd2c474ee940872500aca98a75648d0bf4d3efa 
- newtabalwaysontheright https://github.com/hbt/mouseless/commit/a17f3e3f0c9917af1f944b4d5ff21ccc30da7085
- automakelinks https://github.com/hbt/mouseless/commit/ba34618a09fd78f9aed3c22c0708aeb0ac02bcdc
- newtaburl https://github.com/hbt/mouseless/commit/2ea0bcf53df09cc83edf0dcea278f9965212abef



New Commands:

- enterPassMode - https://github.com/hbt/mouseless/commit/de428a2e6030d75bf564a5dda400b6e3c4c5e40a
- exitPassMode - https://github.com/hbt/mouseless/commit/de428a2e6030d75bf564a5dda400b6e3c4c5e40a
- openUrlExternalEditor - https://github.com/hbt/mouseless/commit/b9f811e2fbdc89ab80039431af6d894dadec8c2c