@@ -511,6 +511,9 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li>
 <p>Fixed contentEditable elements not being editable using external editor <a href="https://github.com/hbt/mouseless/issues/75" class="bare">https://github.com/hbt/mouseless/issues/75</a></p>
 </li>
+<li>
+<p>added <code>previousDomain</code> <code>nextDomain</code> commands</p>
+</li>
 </ol>
 </div>
 </div>
