@@ -1421,6 +1421,14 @@ Marks (aka local marks) are limited to the current page and are saved by domain.
 <td class="tableblock halign-left valign-top"><p class="tableblock">openNextLinkInTab</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">open the next URL from the current tab&#8217;s history in a new tab</p></td>
 </tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">previousDomain</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Jump to previous domain in tab&#8217;s history</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">nextDomain</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Jump to next domain in tab&#8217;s history</p></td>
+</tr>
 </tbody>
 </table>
 </div>
