@@ -542,6 +542,16 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </ol>
 </div>
 </li>
+<li>
+<p>@dhda</p>
+<div class="olist loweralpha">
+<ol class="loweralpha" type="a">
+<li>
+<p>added <code>previousDomain</code> <code>nextDomain</code> commands</p>
+</li>
+</ol>
+</div>
+</li>
 </ol>
 </div>
 </div>
